# moneytree

./: .gitignore  LOGGING_MIGRATION.md  README.md  XTTS_VOICE_CLONING.md  analyze_audio.py  caption_verification.py  compare_caption_styles.py  demo_coqui_tts.py  demo_fast_video.py  demo_natural_tts.py  demo_video.py  demo_voice_cloning.py  demo_youtube_download.py  extract_voice_samples.py  main.py  pyproject.toml  setup_sample_voices.py  test_audio_analysis.py  test_caption_fixes.py  test_caption_improvements.py  test_caption_spacing.py  test_latest_fixes.py  test_tts_fixes.py  test_whisper_captions.py  update_logging.py
lib/animation/: __init__.py  animation_engine.py  entity.py  entity_manager.py  game_engine.py  renderer.py  rps_simulator.py
lib/audio/: __init__.py  duration_estimator.py  music_validator.py  post_processor.py  quality_validator.py  segment_processor.py
lib/config/: __init__.py  tiktok_config.py  youtube_config.py
lib/download/: youtube.py
lib/llm/: description_generator.py  discussion_generator.py  llm_generator.py
lib/pipeline/: __init__.py  media_controller.py
lib/tts/: chattts_speech_generator.py  coqui_speech_generator.py  voice_cloning.py
lib/upload/: __init__.py  tiktok.py  youtube.py
lib/utils/: __init__.py  logging_config.py
lib/video/: caption_manager.py  clip.py  (+7 more)
sample_voices/: README.md  recording_script.txt
tests/: __init__.py  run_all_tests.py  test_crawler.py
tools/: moneytree.py  rps_battle_royale.py  rps_simulation.py  rps_video.py  tiktok_upload.py  voice_cloning.py  wikipedia_video.py  youtube_download.py  youtube_upload.py
(+18 files in other folders)
